# nextjs-wasm-image-editor

./: package.json  vercel.json
pages/: index.js
pages/api/: grayscale.wasm  hello.js  package.json  pre.sh
pages/api/functions/image-grayscale/: Cargo.toml
styles/: Home.module.css
