[package]
name = "image-grayscale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grayscale"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
